--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
           <div class="single_price">
             <div class="all_coupon_product">
               <img src="vendors/img/wepos.svg" alt="dokan" />
+              <img
+                class="offer"
+                src="vendors/img/flat-50-parcent-off.png"
+                alt="dokan"
+              />
               <h2>Dokan Multivendor</h2>
               <p>Build your dream multi vendor marketplace</p>
               <div class="couopn__pricing_tag">
