some poriton update

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <li><a href="#">Brand Assets</a></li>
                 <li><a href="#">Coupons</a></li>
                 <li><a href="#">weLab</a></li>
-                <li><a href="#">Career - We're hiring!</a></li>
+                <li><a href="#">Career - <span class="carrer"> We're hiring!</span></a></li>
               </ul>
             </div>
           </div>
@@ -576,35 +576,35 @@
               <ul class="f_list">
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                <span class="footer-product-icon"></span>
                     Dokan Multivendor
                   </a>
                 </li>
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
                     WP Project Manager
                   </a>
                 </li>
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
                     WP User Frontend
                   </a>
                 </li>
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
                     WP ERP
                   </a>
                 </li>
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
 
                     Conversion Tracking
                   </a>
@@ -612,7 +612,7 @@
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
 
                     wePOS
                   </a>
@@ -620,7 +620,7 @@
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
 
                     Appsero
                   </a>
@@ -628,7 +628,7 @@
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
 
                     weMail
                   </a>
@@ -636,7 +636,7 @@
 
                 <li class="p_dokan">
                   <a href="#" class="">
-                    <i class="fa fa-bars"></i>
+                   <span class="footer-product-icon"></span>
 
                     Happy Addons
                   </a>
@@ -682,8 +682,19 @@ trademark of weDevs Pte. Ltd.</h2>
 
 
 
-    
+    <!-- weDevs adds show here -->
+    <!-- weDevs adds show here -->
 
+
+ <div class="add-img" id="my-add"> 
+		   <img src="vendors/img/coupon_image.png" alt="add" />
+			<a href="#" class="cross">x</a>
+ </div>
+
+    
+    <div class="scroll-bar"> 
+	   <a href="#"><i class="fa fa-chevron-up" aria-hidden="true"></i> </a> 
+	</div>
 
     <!-- <script src="vendors/js/jquery.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
